Add test and adjust web security config